--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/selimbenmrad/FullHealthInc",
+  "homepage": "http://selimbenmrad.github.io/FullHealthInc",
   "name": "fullhealthinc",
   "version": "0.1.0",
   "private": true,
